test/fails/bad_parsing/tag_in_main.lgl
void main() {
    tag s is vec2;
    return;
}